--- a/src/app/components/menu-bar/user-actions/user-actions.component.scss
+++ b/src/app/components/menu-bar/user-actions/user-actions.component.scss
@@ -2,7 +2,7 @@
   color: #fff;
   font-size: 14px;
   float: right;
-  padding: 0 10px 10px;
+  padding: 10px 10px 10px 0;
 }
 
 .super-user:hover {
